--- a/.github/workflows/docs.yaml
+++ b/.github/workflows/docs.yaml
@@ -9,15 +9,16 @@ jobs:
   deploy-docs:
 
     runs-on: ubuntu-latest
-    container: condaforge/mambaforge:latest
 
     steps:
-    - name: Prepare container
-      run: |
-        apt update && apt install -y git make
-
     - name: Checkout
       uses: actions/checkout@v3.3.0
+
+    - name: Setup pixi
+      uses: prefix-dev/setup-pixi@v0.8.1
+      with:
+        pixi-version: v0.37.0
+        cache: true
 
     - name: Determine Version
       shell: bash
@@ -42,5 +43,4 @@ jobs:
         git fetch --all --prune
         git pull origin gh-pages --allow-unrelated-histories
 
-        make env
         make docs-deploy VERSION="$VERSION"
