--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -17,10 +17,14 @@ jobs:
     - uses: actions/checkout@v3.3.0
 
     - name: Setup pixi
-      uses: prefix-dev/setup-pixi@v0.8.1
+    - uses: prefix-dev/setup-pixi@v0.9.3
       with:
-        pixi-version: v0.37.0
-        cache: true
+        pixi-version: v0.62.2
+
+      cache: true
+      auth-host: prefix.dev
+      auth-token: ${{ secrets.PREFIX_DEV_TOKEN }}
+
 
     - name: Run tests with pydantic >=2
       run: |
