--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -14,12 +14,14 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v3.3.0
+    - name: Checkout
+      uses: actions/checkout@v4
 
     - name: Setup pixi
-    - uses: prefix-dev/setup-pixi@v0.9.3
+      uses: prefix-dev/setup-pixi@v0.9.3
       with:
         pixi-version: v0.62.2
+        cache: true
 
       cache: true
       auth-host: prefix.dev
