--- a/.github/workflows/docs.yaml
+++ b/.github/workflows/docs.yaml
@@ -12,7 +12,7 @@ jobs:
 
     steps:
     - name: Checkout
-      uses: actions/checkout@v3.3.0
+      uses: actions/checkout@v4
 
     - name: Setup pixi
       uses: prefix-dev/setup-pixi@v0.9.3
@@ -43,4 +43,4 @@ jobs:
         git fetch --all --prune
         git pull origin gh-pages --allow-unrelated-histories
 
-        make docs-deploy VERSION="$VERSION"
+        pixi run mike deploy --push --update-aliases $VERSION
