Switch to pixi with docker

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,4 +1,4 @@
 {
   "build": { "dockerfile": "Dockerfile" },
-  "postCreateCommand": "make env"
+  "postCreateCommand": "pixi install && pixi run pre-commit install"
 }
