--- a/pyproject.toml
+++ b/pyproject.toml
@@ -46,7 +46,7 @@ markers = [
 ]
 addopts = "-m 'not fe'"
 
-[tool.pixi.project]
+[tool.pixi.workspace]
 channels = ["conda-forge"]
 platforms = ["linux-64", "osx-64", "osx-arm64"]
 
