--- a/pyproject.toml
+++ b/pyproject.toml
@@ -64,6 +64,9 @@ nnpops = "*"
 pydantic-units = "*"
 networkx = "*"
 
+[tool.pixi.feature.cu12.dependencies]
+cuda-version = "12.*"
+
 [tool.pixi.feature.mm.dependencies]
 openmm = "*"
 python-symengine = "*"
@@ -113,9 +116,11 @@ pydantic = ">=2.0"
 pydantic = "<2.0"
 
 [tool.pixi.environments]
-default = { features = ["mm", "fe", "examples", "dev", "docs", "pydantic-2"] }
+default = { features = ["cu12", "mm", "fe", "examples", "dev", "docs", "pydantic-2"] }
+cpu = { features = ["mm", "fe", "examples", "dev", "docs", "pydantic-2"] }
 # The fe feature is excluded when pydantic < 2 as femto (used by absolv) needs pydantic >= 2
-pydantic-1 = { features = ["mm", "examples", "dev", "docs", "pydantic-1"] }
+pydantic-1-cu12 = { features = ["cu12", "mm", "examples", "dev", "docs", "pydantic-1"] }
+pydantic-1-cpu = { features = ["mm", "examples", "dev", "docs", "pydantic-1"] }
 
 [tool.pixi.tasks]
 lint = "ruff check smee examples"
