Only installed required envs in CI

--- a/.github/workflows/docs.yaml
+++ b/.github/workflows/docs.yaml
@@ -19,6 +19,9 @@ jobs:
       with:
         pixi-version: v0.62.2
         cache: true
+        environments: |
+          cpu
+          pydantic-1-cpu
 
     - name: Determine Version
       shell: bash
