Fix selection of pixi envs in CI

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -22,9 +22,7 @@ jobs:
       with:
         pixi-version: v0.62.2
         cache: true
-        environments: |
-          cpu
-          pydantic-1-cpu
+        environments: cpu pydantic-1-cpu
 
     - name: Run tests with pydantic >=2
       run: |
