--- a/pyproject.toml
+++ b/pyproject.toml
@@ -48,13 +48,14 @@ addopts = "-m 'not fe'"
 
 [tool.pixi.workspace]
 channels = ["conda-forge"]
-platforms = ["linux-64"]
+platforms = ["linux-64", "osx-arm64", "osx-64"]
 
 [tool.pixi.pypi-dependencies]
 smee = { path = ".", editable = true }
 
 [tool.pixi.dependencies]
 python = ">=3.10"
+pytorch = "*"
 pip = "*"
 openff-units = "*"
 openff-toolkit-base = ">=0.9.2"
@@ -63,15 +64,15 @@ nnpops = "*"
 pydantic-units = "*"
 networkx = "*"
 
+[tool.pixi.feature.cu12]
+platforms = ["linux-64"]
+
 [tool.pixi.feature.cu12.system-requirements]
 cuda = "12"
 
 [tool.pixi.feature.cu12.dependencies]
 cuda-version = "12.*"
 pytorch-gpu = "*"
-
-[tool.pixi.feature.cpu.dependencies]
-pytorch = "*"
 
 [tool.pixi.feature.mm.dependencies]
 openmm = "*"
@@ -89,7 +90,7 @@ absolv = ">=1.0.1"
 jupyter = "*"
 nbconvert = "*"
 nglview = "*"
-smirnoff-plugins = ">=2025.09.0"
+smirnoff-plugins = "*"
 
 [tool.pixi.feature.dev.dependencies]
 ambertools = "*"
@@ -122,11 +123,11 @@ pydantic = ">=2.0"
 pydantic = "<2.0"
 
 [tool.pixi.environments]
-default = { features = ["cu12", "mm", "fe", "examples", "dev", "docs", "pydantic-2"] }
-cpu = { features = ["cpu", "mm", "fe", "examples", "dev", "docs", "pydantic-2"] }
+default = { features = ["mm", "fe", "examples", "dev", "docs", "pydantic-2"], solve-group = "default" }
+cu12 = { features = ["cu12", "mm", "fe", "examples", "dev", "docs", "pydantic-2"], solve-group = "default" }
 # The fe feature is excluded when pydantic < 2 as femto (used by absolv) needs pydantic >= 2
-pydantic-1-cu12 = { features = ["cu12", "mm", "examples", "dev", "docs", "pydantic-1"] }
-pydantic-1-cpu = { features = ["cpu", "mm", "examples", "dev", "docs", "pydantic-1"] }
+pydantic-1-cpu = { features = ["mm", "examples", "dev", "docs", "pydantic-1"], solve-group = "pydantic-1" }
+pydantic-1-cu12 = { features = ["cu12", "mm", "examples", "dev", "docs", "pydantic-1"], solve-group = "pydantic-1" }
 
 [tool.pixi.tasks]
 lint = "ruff check smee examples"
