--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -33,6 +33,7 @@ jobs:
         pixi-version: v0.62.2
         cache: true
         environments: default pydantic-1-cpu
+        frozen: true
 
     - name: Run tests with pydantic >=2
       run: |
