--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,17 +3,20 @@ repos:
     rev: v3.2.0
     hooks:
     -   id: trailing-whitespace
+        files: "smee|examples"
     -   id: end-of-file-fixer
+        files: "smee|examples"
 
 -   repo: https://github.com/astral-sh/ruff-pre-commit
     # Ruff version.
     rev: v0.15.1
     hooks:
       # Run the linter.
-      - id: ruff
+      - id: ruff-check
         types_or: [python, pyi, jupyter]
         args: [--fix]
         files: "smee|examples"
       # Run the formatter.
       - id: ruff-format
         types_or: [python, pyi, jupyter]
+        files: "smee|examples"
