--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,9 +3,8 @@ repos:
     rev: v3.2.0
     hooks:
     -   id: trailing-whitespace
-        files: "smee|examples"
     -   id: end-of-file-fixer
-        files: "smee|examples"
+        exclude: ".*\\.offxml$"
 
 -   repo: https://github.com/astral-sh/ruff-pre-commit
     # Ruff version.
@@ -19,4 +18,3 @@ repos:
       # Run the formatter.
       - id: ruff-format
         types_or: [python, pyi, jupyter]
-        files: "smee|examples"
