Add ambertools (temporarily)
This will be removed in https://github.com/openforcefield/smee/pull/140

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -64,6 +64,7 @@ nnpops = "*"
 pydantic-units = "*"
 networkx = "*"
 pydantic = ">=2"
+ambertools = "*"
 
 [tool.pixi.feature.cu12]
 platforms = ["linux-64"]
