--- a/pyproject.toml
+++ b/pyproject.toml
@@ -48,7 +48,7 @@ addopts = "-m 'not fe'"
 
 [tool.pixi.workspace]
 channels = ["conda-forge"]
-platforms = ["linux-64", "osx-arm64", "osx-64"]
+platforms = ["linux-64", "osx-arm64"]
 
 [tool.pixi.pypi-dependencies]
 smee = { path = ".", editable = true }
