--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -46,6 +46,7 @@ jobs:
       with:
         pixi-version: v0.62.2
         cache: true
+        locked: false
         environments: ${{ matrix.pixi-environment }}
 
     - name: Run tests
